test/TestPhases/typechecker/invalid/useopaquesingleton.blc
import os "../imports/opaquesingleton"

module exposes h

singleton function h()
    os.f()  // call to an opaque singleton
end